--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Open Ai</title>
+    <title>Ai Bot</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
